[package]
name = "btc-cosign-musigv2"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["kwantam <kwantam@gmail.com>"]

[dependencies]
bitcoin = { version = "0.31.2", features = ["rand-std", "serde"] }
musig2 = "0.0.11"
rand = "0.8.5"
secp256k1 = { version = "0.28.2", features = ["global-context", "hashes", "rand-std"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
